further cleanup of notes/certs/validations
Fallout from the addition of event sequence to signature.  No longer need event coordinates, just the identifier.